# gpu-burn

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs
src/: gpu_burn.rs  main.rs
src/cuda/kernels/: compare.cu
